# autogen-swarm

./: .env.sample  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.dev.txt  requirements.txt
autogen_swarm/: hosting.py  main.py  tools.py
autogen_swarm/protocols/: i_azure_openai_service.py
autogen_swarm/services/: azure_openai_service.py
tests/autogen_swarm/services/: test_azure_openai_service.py
